Issue #204 -- update java to 21 and other updates